tests/A1/tests/reject/LexicalElementIdentifier.ul
void main(){
    int true;
    true = false;
}